[package]
name = "three"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Testing
one =  { path="../one" }
two = { path="../two" }
rand = "0.8.5"
# Logging
log = "0.4.17"
env_logger = "0.9.0"
# metrics
lazy_static = "1.4.0"
metrics = "0.19.0"